# finger-speak

./: .gitignore  README.md  pyproject.toml  user_manual.md
finger_speak/: app_finger_speak.py  hand-detect.py  hand_detect.py  practice.py  volume_control.py
tests/: test_finger_speak.py
