[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mediapipe = "^0.8.9"
opencv-python = "^4.5.5"
pyttsx3 = "^2.90"
pytest = "^7.1.2"
gTTS = "^2.2.4"
SpeechRecognition = "^3.8.1"
wavio = "^0.0.4"
SoundFile = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
